--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,11 +11,14 @@
     padding: 1%;
 }
 
+/*Head Section*/
 .logo{
+    border: 1px solid black;
     width: 10%;
+    float: left;
 }
 
-.img-responsive{
+.img-responsiv{
     width: 100%;
 }
 
@@ -26,4 +29,57 @@
 
 .menu ul{
     list-style-type: none;
+}
+
+.menu ul li{
+    display: inline;
+    padding: 1%;
+    font-weight: bold;
+}
+
+.clear-fix{
+    clear: both;
+    float: none;
+}
+.menu{
+    line-height: 60px;
+}
+
+.menu ul li a{
+    color: #8C00FF;
+}
+a{
+    color: black;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #410075;
+}
+
+/* CSS for food search section*/
+
+.food-search{
+    background-image: url(../Images/bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 7% 0;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.food-search input[type="search"]{
+    width: 50%;
+    padding: 1%;
+    font-size: 1rem;
+    border: none;
+}
+
+.btn{
+    padding: 1%;
+    border: none;
+    font-size: 1rem;
 }
