--- a/CSS/style.css
+++ b/CSS/style.css
@@ -76,10 +76,92 @@ a:hover{
     padding: 1%;
     font-size: 1rem;
     border: none;
+    border-radius: 5px;
 }
 
 .btn{
     padding: 1%;
     border: none;
     font-size: 1rem;
+    border-radius: 5px;
+}
+
+.btn-primary{
+    background-color: #8C00FF;
+    color: white;
+    cursor: pointer;
+
+}
+
+h2{
+    color: #2E3848;
+    font-size: 2rem;
+}
+
+.categories{
+    padding: 4% 0;
+}
+
+.box-3{
+
+    width: 28%;
+    float: left;
+    margin: 2%;
+}
+
+.float-container{
+    position: relative;
+}
+.float-text{
+    position: absolute;
+    bottom: 50px;
+    left: 40%;
+}
+
+.text-white{
+    color: white;
+}
+h3{
+    font-size: 1.5rem;
+}
+
+.img-curve{
+    border-radius: 20px;
+}
+
+
+.food-menu-box{
+    border: 1px solid black;
+    width: 43%;
+    margin: 1%;
+    padding: 2%;
+    float: left;
+    background-color: white;
+    border-radius: 15px;
+}
+
+.food-menu{
+    background-color: #ececec;
+    padding: 4%;
+}
+
+.food-menu-img{
+    width: 20%;
+    float: left;
+}
+
+.food-menu-desc{
+    width: 70%;
+    float: left;
+    margin-left: 8%;
+}
+
+.food-price{
+    font-size: 1.2rem;
+    margin: 2% 0;
+}
+
+.food-desc{
+    font-size: 1rem;
+    color: #747dbc;
 }
